--- a/prob2_2025/cdistrib2.html
+++ b/prob2_2025/cdistrib2.html
@@ -188,10 +188,16 @@ function myFunction() {
 <a href="#Problem set 6">Problem set 6</a>
 </li>
 <li>
-<a href="#Maxwell's derivation of the normal distribution">Maxwell's derivation of the normal distribution</a>
+<a href="#Central Limit Theorem">Central Limit Theorem</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 7">Problem set 7</a>
+</li>
+<li>
+<a href="#Maxwell's derivation of the normal distribution">Maxwell's derivation of the normal distribution</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 8">Problem set 8</a>
 </li>
 <li>
 <a href="#Problems for practice">Problems for practice</a>
@@ -725,6 +731,87 @@ name="Problem set 6">Problem set 6</a></h2>
 <p></p>
 
 <h1><a
+name="Central Limit Theorem">Central Limit Theorem</a></h1>
+The Central imit Theorem (CLT) is possibly the most famous theorem in probability theory and statistics. Originally stated
+ and proved by Gauss, the theorem has many variants due to other mathematicians. Here we shall state the simplest version.
+<p></p>
+
+<fieldset>
+<legend><b><i>Central imit Theorem (CLT)</i></b></legend>
+Let $X_1,X_2,...$  be IID with $E(X_i) = \mu$  and $V(X_i) = \sigma^2 &lt; \infty.$  Let 
+$$\bar X_n = \frac{X_1+\cdots+X_n}{n}\mbox{ for } n\in{\mathbb N}.$$
+Then the distribution of $\frac{\sqrt n(\bar X_n-\mu)}{\sigma}$  tends to $N(0,1)$  as $n\rightarrow \infty.$
+More precisely, if $F_n(\cdot)$  denotes the CDF of $\frac{\sqrt n(\bar X_n-\mu)}{\sigma},$  and $\Phi(\cdot)$ 
+ denotes the $N(0,1)$  CDF, then
+$$\forall t\in{\mathbb R}~~F_n(t)\rightarrow \Phi(t) \mbox{ as } n\rightarrow \infty.$$
+</fieldset>
+
+<p>
+<b><i>Proof:</i></b>Next semester.<b><i>[QED]</i></b>
+</p>
+ This theorem is a manifestation of statistical regularity. Whatever may the true
+ distribution of the $X_i$'s be, if you average a large number of $X_i$'s you get close
+ approximation to the normal distribution. This allows
+statistician to deal with averages of a large number of IID observations without knowing the true
+ underlying distribution. 
+<p></p>
+Let's look at a typical example. 
+<p></p>
+
+<p>
+<b>EXAMPLE 1:</b>&nbsp;If 40% of the population of a city supports a poll candidate, then what is the approximate
+ probability that a random sample of 500 persons from the city will have at least 250 supporters?
+<p></p>
+<b>SOLUTION:</b>
+Here we think of the sampling procedure as 500 trials of the same  random experiment: Pick a person at random
+ from the population of the city. 
+<p></p>
+We shall assume that the trials are IID. Now here we are introducing an approximation: the first
+ membr of the sample was drawn from the entire population, but since we generally sample
+ <i>without replacement</i>  in such a scenario, the second member of the sample was drawn from a
+ population of size one less than in the case of the first member. So the radom experiment has
+ actually changed, and they are not independent also. But since the population is large (much
+ larger than 500), so we are ignoring both the non-identical and dependent nature and assuming IID. 
+<p></p>
+We also have a random variable: 
+$$X(\omega) = \left\{\begin{array}{ll}1 &\text{if }\omega\mbox{ supports the candiate}\\ 0&\text{otherwise.}\end{array}\right.$$ 
+Here$\omega$  is the person sampled. Each trial gives rise to one copy of this random variable, so we have 
+$X_1,...,X_{500}$  IID $Bernoulli(0.4).$  This $0.4$  came from the 40% given in the problem. 
+<p></p>
+By CLT we have 
+$$\frac{\sqrt n (\bar X_n-\mu)}{\sigma}\rightarrow N(0,1)$$
+as $n\rightarrow \infty,$  where $\mu = E(X_i)$  and $\sigma^2 = V(X_i)&lt; \infty.$  We shall write this as 
+$$\bar X_n \stackrel{\bullet}{\sim} N\left(\mu,\frac{\sigma^2}{n}\right)$$
+for large $n.$  Here $\stackrel\bullet\sim$  means "approximately distributed as".
+<p></p>
+In our case, $\mu = 0.40$, $\sigma^2 = 0.4(1-0.4) = 0.24$  and $n=500.$  So 
+$$\bar X_{500} \stackrel{\bullet}{\sim} N\left(0.40,\frac{0.24}{500}\right),$$
+or 
+$$\sum_1^n X_i \stackrel{\bullet}{\sim} N(0.40\times 500,0.24\times 500)\equiv N(200, 120).$$
+Nowe we can find the required probability as
+$$P(\sum_1^{500} X_i \geq 200) \approx 1-\Phi\left(\frac{250-200}{\sqrt{500}}\right).$$
+This probability may be obtained by looking up standard $N(0,1)$  tables or using R as
+<font color="red">
+<pre>
+1-pnorm((250-200)/sqrt(500))
+</pre>
+</font>
+  ■
+</p>
+In this problem we knew the distribution of the $X_i$'s, but we never really made any use of it, except to compute $E(X_i)$ 
+ and $V(X_i).$  
+<h2><a
+name="Problem set 7">Problem set 7</a></h2>
+::<p>
+<b>EXERCISE 18:</b>&nbsp;<font size="-2">[rossdistrib10.png]</font><img width="" src="image/rossdistrib10.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 19:</b>&nbsp;<font size="-2">[rossdistrib8.png]</font><img width="" src="image/rossdistrib8.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 20:</b>&nbsp;<font size="-2">[rossdistrib5.png]</font><img width="" src="image/rossdistrib5.png" style="vertical-align:text-top;"></p>
+
+<p></p>
+
+<h1><a
 name="Maxwell's derivation of the normal distribution">Maxwell's derivation of the normal distribution</a></h1>
 <a href="https://youtu.be/NYFoXVF7xkE">Video for this section</a>
 <p></p>
@@ -768,23 +855,23 @@ Since $f$  is a density, hence its total intergral must be 1. Hence $k &lt; 0$  
 <p></p>
 
 <h2><a
-name="Problem set 7">Problem set 7</a></h2>
+name="Problem set 8">Problem set 8</a></h2>
 
 <p>
-<b>EXERCISE 18:</b>&nbsp;If $X$  is a random variable with density proportional to $\exp((1-x)(3+4x))$  for
+<b>EXERCISE 21:</b>&nbsp;If $X$  is a random variable with density proportional to $\exp((1-x)(3+4x))$  for
  $x\in{\mathbb R}$,  then find the distribution of $X.$ </p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 19:</b>&nbsp;Let $\vec V = (V_1,V_2,V_3)$  have the joint distribution as in Maxwell's derivation.
+<b>EXERCISE 22:</b>&nbsp;Let $\vec V = (V_1,V_2,V_3)$  have the joint distribution as in Maxwell's derivation.
  Consider $\vec U = \frac{\vec V}{\|\vec V\|}$, the unit vector along $\vec V.$  Describe
  the distribution of $\vec U.$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 20:</b>&nbsp;If $X$  has density proportional to $e^{ax^2+bx+c}$  for $x\in{\mathbb R}$, for some
+<b>EXERCISE 23:</b>&nbsp;If $X$  has density proportional to $e^{ax^2+bx+c}$  for $x\in{\mathbb R}$, for some
  constants $a,b,c$, then find $E(X)$  and $V(X).$</p>
 
 <p></p>
@@ -792,25 +879,19 @@ name="Problem set 7">Problem set 7</a></h2>
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;<font size="-2">[rossdistrib1.png]</font><img width="" src="image/rossdistrib1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 24:</b>&nbsp;<font size="-2">[rossdistrib1.png]</font><img width="" src="image/rossdistrib1.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;<font size="-2">[rossdistrib2.png]</font><img width="" src="image/rossdistrib2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 25:</b>&nbsp;<font size="-2">[rossdistrib2.png]</font><img width="" src="image/rossdistrib2.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 23:</b>&nbsp;<font size="-2">[rossdistrib3.png]</font><img width="" src="image/rossdistrib3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 26:</b>&nbsp;<font size="-2">[rossdistrib3.png]</font><img width="" src="image/rossdistrib3.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 24:</b>&nbsp;<font size="-2">[rossdistrib4.png]</font><img width="" src="image/rossdistrib4.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 27:</b>&nbsp;<font size="-2">[rossdistrib4.png]</font><img width="" src="image/rossdistrib4.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 25:</b>&nbsp;<font size="-2">[rossdistrib5.png]</font><img width="" src="image/rossdistrib5.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 28:</b>&nbsp;<font size="-2">[rossdistrib6.png]</font><img width="" src="image/rossdistrib6.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 26:</b>&nbsp;<font size="-2">[rossdistrib6.png]</font><img width="" src="image/rossdistrib6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 29:</b>&nbsp;<font size="-2">[rossdistrib7.png]</font><img width="" src="image/rossdistrib7.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 27:</b>&nbsp;<font size="-2">[rossdistrib7.png]</font><img width="" src="image/rossdistrib7.png" style="vertical-align:text-top;"></p>
-::<p>
-<b>EXERCISE 28:</b>&nbsp;<font size="-2">[rossdistrib8.png]</font><img width="" src="image/rossdistrib8.png" style="vertical-align:text-top;"></p>
-::<p>
-<b>EXERCISE 29:</b>&nbsp;<font size="-2">[rossdistrib9.png]</font><img width="" src="image/rossdistrib9.png" style="vertical-align:text-top;"></p>
-::<p>
-<b>EXERCISE 30:</b>&nbsp;<font size="-2">[rossdistrib10.png]</font><img width="" src="image/rossdistrib10.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 30:</b>&nbsp;<font size="-2">[rossdistrib9.png]</font><img width="" src="image/rossdistrib9.png" style="vertical-align:text-top;"></p>
 ::<p>
 <b>EXERCISE 31:</b>&nbsp;<font size="-2">[rossdistrib11.png]</font><img width="" src="image/rossdistrib11.png" style="vertical-align:text-top;"></p>
 ::<p>
