--- a/prob2_2025/cdistrib2.html
+++ b/prob2_2025/cdistrib2.html
@@ -805,7 +805,12 @@ name="Problem set 7">Problem set 7</a></h2>
 ::<p>
 <b>EXERCISE 18:</b>&nbsp;<font size="-2">[rossdistrib10.png]</font><img width="" src="image/rossdistrib10.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;<font size="-2">[rossdistrib8.png]</font><img width="" src="image/rossdistrib8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 19:</b>&nbsp;<font size="-2">[rossdistrib8.png]</font><img width="" src="image/rossdistrib8.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
+class="ans" id="lab1">For the second part, just drop the 6's. This means you are rolling a 5-faced die 800 times.</div></p>
+
+</p>
 ::<p>
 <b>EXERCISE 20:</b>&nbsp;<font size="-2">[rossdistrib5.png]</font><img width="" src="image/rossdistrib5.png" style="vertical-align:text-top;"></p>
 
@@ -878,6 +883,8 @@ name="Problem set 8">Problem set 8</a></h2>
 
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
+You may leave the answers in terms the $N(0,1)$  CDF $\Phi(x)$  or its inverse $\Phi ^{-1}(x).$
+<p></p>
 ::<p>
 <b>EXERCISE 24:</b>&nbsp;<font size="-2">[rossdistrib1.png]</font><img width="" src="image/rossdistrib1.png" style="vertical-align:text-top;"></p>
 ::<p>
