--- a/prob2_2025/cdistrib2.html
+++ b/prob2_2025/cdistrib2.html
@@ -856,7 +856,7 @@ for some constant $k.$   Solving the differerntial equation we get
 $\log f(x) = \frac{k x^2}{2}+$ constant,   or 
 $$f(x) \propto e^{k x^2/2}.$$
 Since $f$  is a density, hence its total intergral must be 1. Hence $k &lt; 0$  and we get
- the density of $N\left(0,-\frac{1}{2k}\right).$
+ the density of $N\left(0,-\frac{1}{k}\right).$
 <p></p>
 
 <h2><a
