--- a/prob2_2025/measure.html
+++ b/prob2_2025/measure.html
@@ -164,7 +164,7 @@ function myFunction() {
 <a href="#Problem set 2">Problem set 2</a>
 </li>
 <li>
-<a href="#Why Lebesgue's solution works">Why Lebesgue's solution works</a>
+<a href="#Riemann vs Lebesgue">Riemann vs Lebesgue</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 3">Problem set 3</a>
@@ -373,7 +373,9 @@ name="Problem set 2">Problem set 2</a></h2>
 <p></p>
 
 <h1><a
-name="Why Lebesgue's solution works">Why Lebesgue's solution works</a></h1>
+name="Riemann vs Lebesgue">Riemann vs Lebesgue</a></h1>
+<a href="https://youtu.be/8XY4dBDhOkQ">Video for this section</a>
+<p></p>
 Just based on these diagrams, you may think that Lebesgue's idea is no different from Riemann's
  idea. But actually, Lebesgue's
 approximations are more flexible than Riemann's. To understand this look at the graph below, where
